2005-08-18  Wim Taymans  <wim@fluendo.com>

	* gst/rtp/gstrtpamrenc.c: (gst_rtpamrenc_class_init),
	(gst_rtpamrenc_init), (gst_rtpamrenc_chain),
	(gst_rtpamrenc_set_property), (gst_rtpamrenc_get_property):
	* gst/rtp/gstrtpamrenc.h:
	Added payload_type and ssrc properties to the payloader.

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_send), (gst_rtspsrc_open),
	(gst_rtspsrc_close), (gst_rtspsrc_play):
	Options need to be stripped and are in the Public header field.

	* gst/rtsp/rtspurl.c: (rtsp_url_parse):
	Fix url / parsing...


2005-08-18  Wim Taymans  <wim@fluendo.com>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpamrdec.c: (gst_rtpamrdec_get_type),
	(gst_rtpamrdec_base_init), (gst_rtpamrdec_class_init),
	(gst_rtpamrdec_init), (gst_rtpamrdec_chain),
	(gst_rtpamrdec_set_property), (gst_rtpamrdec_get_property),
	(gst_rtpamrdec_change_state), (gst_rtpamrdec_plugin_init):
	* gst/rtp/gstrtpamrdec.h:
	* gst/rtp/gstrtpamrenc.c: (gst_rtpamrenc_get_type),
	(gst_rtpamrenc_base_init), (gst_rtpamrenc_class_init),
	(gst_rtpamrenc_init), (gst_rtpamrenc_chain),
	(gst_rtpamrenc_set_property), (gst_rtpamrenc_get_property),
	(gst_rtpamrenc_change_state), (gst_rtpamrenc_plugin_init):
	* gst/rtp/gstrtpamrenc.h:
	* gst/rtp/gstrtpmpaenc.c: (gst_rtpmpaenc_class_init),
	(gst_rtpmpaenc_flush), (gst_rtpmpaenc_chain):
	Added very simplistic amr payloader. depayloader does not
	work yet.

2005-08-18  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_send), (gst_rtspsrc_open),
	(gst_rtspsrc_close), (gst_rtspsrc_play), (gst_rtspsrc_pause),
	(gst_rtspsrc_change_state):
	* gst/rtsp/gstrtspsrc.h:
	* gst/rtsp/rtspdefs.c: (rtsp_method_as_text), (rtsp_find_method):
	* gst/rtsp/rtspdefs.h:
	* gst/rtsp/rtsptransport.c: (rtsp_transport_parse):
	Handle RTSP defaults better.
	Issue OPTIONS request to figure out what we are allowed to do.
	Make the methods a bitfield so we can easily collect supported 
	options.
	Fix rtsp_find_method.